--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -17,7 +17,7 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-wrapper",
                 "apidependenciesList": [
                         "CommonWrapperMin", "CommonAceEditor", "CommonSvga", "CommonAccessibility",
-                        "CommonPanel", "CommonMedia", "CommonAudioRecord", "CommonLanguage"
+                        "CommonPanel", "CommonMedia", "CommonAudioRecord"
                 ]
         ],
         "CommonWrapperMin"      : [
@@ -27,7 +27,7 @@ ext.commonmoduleInfo = [
                         "CommonFeedback", "CommonSplash", "CommonPraise", "CommonAbout",
                         "CommonList", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare",
                         "CommonMessage", "CommonPermission", "CommonPhotos", "CommonCrop",
-                        "CommonQRCode", "CommonWebview", "CommonNetwork"
+                        "CommonQRCode", "CommonWebview", "CommonNetwork", "CommonLanguage"
                 ]
         ],
         "Framework"             : [
@@ -194,7 +194,7 @@ ext.commonmoduleInfo = [
         ],
         "CommonLanguage"        : [
                 "version"            : "6.24.0",
-                "artifactId"         : "common-crop",
+                "artifactId"         : "common-language",
                 "apidependenciesList": [
                         "Framework","CommonList"
                 ]
