通用http支持使用非当前网络

--- a/CommonLanguage/src/main/AndroidManifest.xml
+++ b/CommonLanguage/src/main/AndroidManifest.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.bihe0832.android.common.language">
-
+    <application>
+        <activity
+            android:configChanges="orientation|screenSize|keyboardHidden|locale"
+            android:exported="true"
+            android:name="com.bihe0832.android.common.language.LanguageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AAF.ActivityTheme" />
+    </application>
 </manifest>
