tab 页面多语言支持

--- a/dependencies_common.gradle
+++ b/dependencies_common.gradle
@@ -197,6 +197,9 @@ ext.commonmoduleInfo = [
                 "artifactId"         : "common-language",
                 "apidependenciesList": [
                         "Framework","CommonList"
+                ],
+                "specialdependenciesList": [
+                        "kapt": ["RouterCompiler"]
                 ]
         ]
 
